--- a/article.html
+++ b/article.html
@@ -74,8 +74,8 @@
             <div>
                 <h3>Email Newsletter</h3>
              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, praesentium?</p>
-            <form>
-                <input type = "email" placeholder= "Enter The Mail Id">
+             <form  name = "contact" method = "POST" data-netlify="true">
+                <input type = "email"  name = "email" placeholder= "Enter The Mail Id">
                 <input type="submit" value="Subscribe" class= "btn btn-primary">
             </form>
             </div>
